сделаны задания 3-его урока

--- a/Урок 3/task1.html
+++ b/Урок 3/task1.html
@@ -13,13 +13,13 @@
         'use strict'
         for (let i of Array(11).keys()) {
             if (i == 0) {
-                console.log(`${i} - это ноль`)
+                console.log(`${i} - это ноль`);
             } else {
                 let reminder = i % 2;
                 if (reminder == 0) {
-                    console.log(`${i} - четное число`)
+                    console.log(`${i} - четное число`);
                 } else {
-                    console.log(`${i} - нечетное число`)
+                    console.log(`${i} - нечетное число`);
                 }
             }
         }
