--- a/Урок 3/task3.html
+++ b/Урок 3/task3.html
@@ -25,10 +25,10 @@
         ];
 
         products.map(function (product) {
-            product.price = product.price * 0.85
+            product.price = product.price * 0.85;
         })
         
-        console.log(products)
+        console.log(products);
 
     </script>
 </body>
