--- a/Урок 3/task2.html
+++ b/Урок 3/task2.html
@@ -33,10 +33,10 @@
                 },
             ]
         };
-        console.log(post.author)
-        console.log(post.comments[0].rating.dislikes)
-        console.log(post.comments[1].userId)
-        console.log(post.comments[1].text)
+        console.log(post.author);
+        console.log(post.comments[0].rating.dislikes);
+        console.log(post.comments[1].userId);
+        console.log(post.comments[1].text);
 
         
     </script>
