--- a/Урок 5/задания 1 уровня/1 поиск элементов на странице/4-поиск_одного_элемента_по_селектору.html
+++ b/Урок 5/задания 1 уровня/1 поиск элементов на странице/4-поиск_одного_элемента_по_селектору.html
@@ -28,6 +28,10 @@
     aria-valuenow="50" и выведите его в консоль. -->
 
     <script>
+        'use strict';
+
+        let divNow50 = document.querySelector('div[aria-valuenow="50"]');
+        console.log(divNow50);
 
     </script>
 </body>
