--- a/Урок 5/задания 1 уровня/1 поиск элементов на странице/5-название_вкладки.html
+++ b/Урок 5/задания 1 уровня/1 поиск элементов на странице/5-название_вкладки.html
@@ -9,7 +9,7 @@
     <!-- Задание. Выведите содержимое тега title в консоль. -->
 
     <script>
-        
+        console.log(document.getElementsByTagName('title')[0].innerHTML)
     </script>
 </body>
 </html>
