--- a/Урок 5/задания 1 уровня/1 поиск элементов на странице/2-поиск_по_имени_класса.html
+++ b/Урок 5/задания 1 уровня/1 поиск элементов на странице/2-поиск_по_имени_класса.html
@@ -16,6 +16,12 @@
     и выведите их в консоль. -->
 
     <script>
+        'use strict';
+
+        let elementsOne = document.getElementsByClassName('one');
+        for(let i = 0; i < elementsOne.length; i++){
+            console.log(elementsOne[i]);
+        }
         
     </script>
 </body>
