--- a/Урок 5/задания 1 уровня/1 поиск элементов на странице/3-поиск_всех_элементов_по_селектору.html
+++ b/Урок 5/задания 1 уровня/1 поиск элементов на странице/3-поиск_всех_элементов_по_селектору.html
@@ -29,7 +29,13 @@
     и выведите их в консоль. -->
 
     <script>
+        'use strict';
 
+        let cardLinks = document.querySelectorAll('.card-body .card-link');
+        for(let i = 0; i < cardLinks.length; i++){
+            console.log(cardLinks[i]);
+        }
+        
     </script>
 </body>
 
