--- a/Урок 5/задания 1 уровня/2 класс node/3-удаление_узлов.html
+++ b/Урок 5/задания 1 уровня/2 класс node/3-удаление_узлов.html
@@ -22,7 +22,13 @@
     2. Аналогичным образом удалите элемент с классом .btn-outline-dark -->
 
     <script>
+        'use strict';
 
+        let btnWarning = document.querySelector('.btn-outline-warning');
+        let btnDark = document.querySelector('.btn-outline-dark');
+        btnWarning.remove();
+        btnDark.remove();
+        
     </script>
 </body>
 
