--- a/Урок 5/задания 1 уровня/2 класс node/1-получение_родительского_узла.html
+++ b/Урок 5/задания 1 уровня/2 класс node/1-получение_родительского_узла.html
@@ -18,8 +18,8 @@
                 fringilla. Donec lacinia congue felis in faucibus.
             </p>
             <p>
-                Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et
-                magnis dis parturient montes, nascetur ridiculus mus.
+                Donec sed odio dui. Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus
+                et magnis dis parturient montes, nascetur ridiculus mus.
             </p>
         </div>
     </div>
@@ -28,7 +28,11 @@
     классом .media-body. -->
 
     <script>
-        
+        'use strict';
+
+        let mtParent = document.querySelector('.mt-0').parentElement;
+        console.log(mtParent);
+
     </script>
 </body>
 
