--- a/Урок 5/задания 1 уровня/2 класс node/2-добавление_элемента_с_appendChild.html
+++ b/Урок 5/задания 1 уровня/2 класс node/2-добавление_элемента_с_appendChild.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <div>
 
     </div>
@@ -16,7 +18,14 @@
     -->
 
     <script>
+        'use strict';
 
+        let divTop = document.querySelector('div');
+        let h3New = document.createElement('h3');
+        h3New.textContent += 'hello world';
+        divTop.appendChild(h3New);
+        // console.log(mtParent);
     </script>
 </body>
+
 </html>
