--- a/Урок 5/задания 1 уровня/2 класс node/4-замена_текста_в_элементе.html
+++ b/Урок 5/задания 1 уровня/2 класс node/4-замена_текста_в_элементе.html
@@ -22,6 +22,10 @@
     <!-- Задание. Найдите кнопку с классом .btn-info и сделайте текст в кнопке: "Кнопка".-->
 
     <script>
+        'use strict';
+        
+        let btnInfo = document.querySelector('.btn-info');
+        btnInfo.innerText = 'Кнопка';
         
     </script>
 </body>
