--- a/Урок 5/задания 1 уровня/3 работа с атрибутами/1-добавление_классов.html
+++ b/Урок 5/задания 1 уровня/3 работа с атрибутами/1-добавление_классов.html
@@ -16,7 +16,11 @@
     <!-- Задание. Найдите тег ul. И добавьте ему класс one. -->
 
     <script>
+        'use strict';
         
+        let ul = document.querySelector('ul');
+        ul.classList.add('one');
+                
     </script>
 </body>
 </html>
