--- a/Урок 5/задания 1 уровня/3 работа с атрибутами/4-удобная_вставка.html
+++ b/Урок 5/задания 1 уровня/3 работа с атрибутами/4-удобная_вставка.html
@@ -13,5 +13,12 @@
     <a href="#">link</a>
     используя метод insertAdjacentHTML.
     -->
+    <script>
+        'use strict';
+        
+        let div = document.querySelector('div');
+        div.insertAdjacentHTML("afterbegin", '<a href="#">link</a>');
+                
+    </script>
 </body>
 </html>
