--- a/Урок 5/задания 1 уровня/3 работа с атрибутами/7-замена_id.html
+++ b/Урок 5/задания 1 уровня/3 работа с атрибутами/7-замена_id.html
@@ -17,5 +17,11 @@
 
     <!-- Задание. найдите заголовок с id="title" и замените значение id
     на что-то другое. -->
+    <script>
+        'use strict';
+        
+        document.querySelector('#title').id = 'other_title';
+                
+    </script>
 </body>
 </html>
