--- a/Урок 5/задания 2 уровня/1 получение элементов и свойств/2-вывод_имени_тега.html
+++ b/Урок 5/задания 2 уровня/1 получение элементов и свойств/2-вывод_имени_тега.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h3 class="one">Заголовок</h3>
     <a class="one" href="#">ссылка</a>
@@ -17,7 +19,14 @@
     -->
 
     <script>
+        'use strict';
 
+        let elementsOne = document.getElementsByClassName('one');
+        for(let i=0; i < elementsOne.length; i++){
+            console.log(elementsOne[i].tagName)
+        }
+        
     </script>
 </body>
+
 </html>
