--- a/Урок 5/задания 2 уровня/1 получение элементов и свойств/8-добавление_классов.html
+++ b/Урок 5/задания 2 уровня/1 получение элементов и свойств/8-добавление_классов.html
@@ -19,7 +19,14 @@
     -->
 
     <script>
-        
+        'use strict';
+
+        let bElements = document.querySelectorAll('b');
+        bElements.forEach(function(bElem){
+            if(!bElem.classList.contains('sign')){
+                bElem.classList.add('sign');
+            }
+        })
     </script>
 </body>
 </html>
