--- a/Урок 5/задания 2 уровня/2 обработка события/1-получение_свойств.html
+++ b/Урок 5/задания 2 уровня/2 обработка события/1-получение_свойств.html
@@ -16,5 +16,17 @@
     4. При клике из event.target выведите в консоль: id, имя класса (используйте
     свойство className), текст на кнопке.
     -->
+    <script>
+        'use strict';
+        
+        let btn = document.querySelector('button');
+        btn.addEventListener('click', function (event) {
+            let btnTarget = event.target;
+            console.log(btnTarget.id);
+            console.log(btnTarget.className);
+            console.log(btnTarget.textContent);
+        })
+
+    </script>
 </body>
 </html>
