--- a/Урок 5/задания 2 уровня/2 обработка события/2-получение_всех_классов.html
+++ b/Урок 5/задания 2 уровня/2 обработка события/2-получение_всех_классов.html
@@ -18,5 +18,18 @@
     3. Переберите с помощью forEach event.target.classList и выведите каждый класс
     в консоль.
     -->
+
+    <script>
+        'use strict';
+        
+        document.querySelector('p').addEventListener('click', function (event) {
+            let targetClasses = event.target.classList;
+            console.log(targetClasses);
+            targetClasses.forEach(function(targClass){
+                console.log(targClass);
+            })
+        })
+
+    </script>
 </body>
 </html>
