--- a/Урок 5/задания 2 уровня/2 обработка события/3-получение_произвольных_атрибутов.html
+++ b/Урок 5/задания 2 уровня/2 обработка события/3-получение_произвольных_атрибутов.html
@@ -21,5 +21,17 @@
     3. При клике из event.target c помощью getAttribute() получите значение
     каждого атрибута и выведите в консоль.
     -->
+    
+    <script>
+        'use strict';
+        let divElem = document.querySelector('div');
+        divElem.addEventListener('click', function(event){
+            let targAttributes = event.target.attributes;
+            for(let i=0; i < targAttributes.length; i++){
+                console.log(targAttributes[i].value);
+            }
+        })
+    </script>
+
 </body>
 </html>
