--- a/Урок 6/задания 2 уровня/1-получение_значений_из_input/inputs.html
+++ b/Урок 6/задания 2 уровня/1-получение_значений_из_input/inputs.html
@@ -19,7 +19,13 @@
     -->
 
     <script>
-        
+        'use strict';
+
+        let span = document.querySelector('span');
+        let fromE1 = document.getElementById('from');
+        fromE1.addEventListener('change', function(event){
+            span.textContent = event.target.value;
+        })
     </script>
 </body>
 </html>
