--- a/Урок 6/задания 2 уровня/3-рейтинг/rating.html
+++ b/Урок 6/задания 2 уровня/3-рейтинг/rating.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+        crossorigin="anonymous" />
     <style>
         i {
             font-size: 50px;
         }
+
         .golden {
             color: gold;
         }
     </style>
 </head>
+
 <body>
     <i id="first" class="fas fa-star"></i>
     <i id="second" class="fas fa-star"></i>
@@ -31,23 +36,55 @@
     -->
 
     <script>
-        let firstStar = document.getElementById('first');
-        let secondStar = document.getElementById('second');
-        let thirdStar = document.getElementById('third');
-        let fourthStar = document.getElementById('fourth');
-        let fifthStar = document.getElementById('fifth');
 
-        let goldenClass = 'golden';
-
-        firstStar.addEventListener('mouseover', function() {
-            if (!firstStar.classList.contains('goldenClass')) {
-                firstStar.classList.add(goldenClass);
+        function colorize(element){
+            element.classList.add('golden');
+            let prevStar = element.previousElementSibling;
+            if(prevStar){
+                colorize(prevStar);
             }
-        });
+        }
 
-        firstStar.addEventListener('mouseout', function() {
-            firstStar.classList.remove(goldenClass);
-        });
+        function uncolorize(element){
+            element.classList.remove('golden');
+            let prevStar = element.previousElementSibling;
+            if(prevStar){
+                uncolorize(prevStar);
+            }
+        }
+
+        let stars = document.querySelectorAll('.fa-star');
+
+        stars.forEach(function(star){
+            star.addEventListener('mouseover', function(event){
+                colorize(event.target)
+            })
+        })
+
+        stars.forEach(function(star){
+            star.addEventListener('mouseout', function(event){
+                uncolorize(event.target)
+            })
+        })
+
+        // let firstStar = document.getElementById('first');
+        // let secondStar = document.getElementById('second');
+        // let thirdStar = document.getElementById('third');
+        // let fourthStar = document.getElementById('fourth');
+        // let fifthStar = document.getElementById('fifth');
+
+        // let goldenClass = 'golden';
+
+        // firstStar.addEventListener('mouseover', function () {
+        //     if (!firstStar.classList.contains('goldenClass')) {
+        //         firstStar.classList.add(goldenClass);
+        //     }
+        // });
+
+        // firstStar.addEventListener('mouseout', function () {
+        //     firstStar.classList.remove(goldenClass);
+        // });
     </script>
 </body>
+
 </html>
