--- a/Урок 6/задания 3 уровня/1-удаление_блока_по_клику/messages.html
+++ b/Урок 6/задания 3 уровня/1-удаление_блока_по_клику/messages.html
@@ -44,10 +44,17 @@
     -->
 
     <script>
+        'use strict';
+
+        let btns = document.querySelectorAll('button');
+        btns.forEach(function(btn){
+            btn.addEventListener('click', closeClickHandler);
+        })
 
         function closeClickHandler(event) {
-           
+           event.currentTarget.parentNode.style.display = 'none';
         }
+
     </script>
 </body>
 
