--- a/Урок 6/задания 3 уровня/4-кнопка_наверх/goToTop.html
+++ b/Урок 6/задания 3 уровня/4-кнопка_наверх/goToTop.html
@@ -27,6 +27,17 @@
     -->
 
     <script>
+        'use strict';
+
+        let goToTop = document.querySelector('div#goToTop');
+
+        window.addEventListener('scroll', function(){
+            if(window.pageYOffset > 500){
+                goToTop.style.display = 'block';
+            } else {
+                goToTop.style.display = 'none';
+            }
+        });
         
     </script>
 </body>
