--- a/Урок 6/задания 3 уровня/2-добавление_в_корзину/toCart.html
+++ b/Урок 6/задания 3 уровня/2-добавление_в_корзину/toCart.html
@@ -41,10 +41,16 @@
     -->
 
     <script>
+        'use strict';
         
+        let btns = document.querySelectorAll('button');
+        btns.forEach(function(btn){
+            btn.addEventListener('click', buttonClickHandler);
+        })
 		
 		function buttonClickHandler(event) {
-		
+            event.target.parentNode.style.backgroundColor = 'lightgreen';
+            event.target.textContent = 'Добавлено';
 		}
     </script>
 </body>
