--- a/Урок 7/1 уровень/3-заполнение_с_конкатенацией.html
+++ b/Урок 7/1 уровень/3-заполнение_с_конкатенацией.html
@@ -8,7 +8,12 @@
 <body>
     
     <script>
+        'use strict';
+
         let totalString = "";
+        for(let i = 1; i <= 3; i++){
+            totalString += `слово${i}`;
+        }
 
         /* Задание.
         Дописывайте в строку totalString с помощью цикла и конкатенации строки,
