--- a/Урок 7/1 уровень/2-очистка_с_помощью_innerHTML.html
+++ b/Урок 7/1 уровень/2-очистка_с_помощью_innerHTML.html
@@ -16,6 +16,9 @@
     -->
 
     <script>
+        'use strict';
+
+        document.querySelector('p').innerHTML = '';
         
     </script>
 </body>
