--- a/Урок 7/1 уровень/4-вставка_разметки.html
+++ b/Урок 7/1 уровень/4-вставка_разметки.html
@@ -15,10 +15,13 @@
     -->
 
     <script>
+        'use strict';
+
         let url = "https://picsum.photos/200/300";
         let targetAttr = "_blank";
         let linkText = "ссылка";
 
+        document.querySelector('body').insertAdjacentHTML('afterBegin', `<a href="${url}" target="${targetAttr}">${linkText}</a>`)
     </script>
 </body>
 </html>
