--- a/Урок 7/3 уровень/2-сообщение/message.html
+++ b/Урок 7/3 уровень/2-сообщение/message.html
@@ -26,7 +26,23 @@
     -->
 
     <script>
-        
+        'use strict';
+
+        let message = document.querySelector('div');
+        let messageHeight = message.clientHeight;
+        let messageAudio = new Audio('notification.mp3');
+
+        document.querySelector('button').addEventListener('click', function(){
+            message.style.transform = `translateY(-${messageHeight + 30}px)`;
+            messageAudio.play();
+        })
+
+        //добавил закрытие сообщения по клику
+        message.addEventListener('click', function(event){
+            event.target.remove();
+        })
+
+
     </script>
 </body>
 
